# agentops-mcp

./: README.md  pyproject.toml
.github/workflows/: test.yml
agentops_mcp/: server.py
