[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentops-mcp"
version = "0.1.0"
description = "MCP server exposing AI coding agent operations analytics — cost, audit, safety, efficiency for Claude Code, from local transcripts."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Evan Cates" }]
keywords = ["mcp", "model-context-protocol", "claude-code", "ai-agents", "observability"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]
dependencies = ["mcp>=1.2.0"]

[project.scripts]
agentops-mcp = "agentops_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Ludoonus/agentops-mcp"

[tool.setuptools.packages.find]
include = ["agentops_mcp*"]
